# Client-Server-Sorting-File

./: README.md
Client_GL/: CMakeLists.txt  client_linux.cpp  client_win.cpp
Server_GL/: CMakeLists.txt  filesort_linux.h  filesort_win.h  server_linux.cpp  server_win.cpp
